--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "vant": "^2.12.44",
